modified styling, conquer the bugs of date, alignment, the form is cool now

--- a/dynamic-form-builder/src/components/organisms/DynamicForm/styles.css
+++ b/dynamic-form-builder/src/components/organisms/DynamicForm/styles.css
@@ -102,3 +102,8 @@ form select {
         font-size: 0.9rem;
     }
 }
+
+.btn{
+    border-radius: 12px;
+    width:400px;
+}
